{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 15,
  "lineage": "e73de9ae-bda6-e13b-8f86-9bde5b8155c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028dc94107321f867",
            "arn": "arn:aws:ec2:us-east-1:575754814210:elastic-ip/eipalloc-028dc94107321f867",
            "associate_with_private_ip": "10.81.3.33",
            "association_id": "eipassoc-05cc74891d51f52c2",
            "domain": "vpc",
            "id": "eipalloc-028dc94107321f867",
            "instance": "i-0ff4b20a46153c5e7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b5288dd688a5003",
            "private_dns": "ip-10-81-3-33.ec2.internal",
            "private_ip": "10.81.3.33",
            "public_dns": "ec2-100-49-25-34.compute-1.amazonaws.com",
            "public_ip": "100.49.25.34",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-eip-1"
            },
            "tags_all": {
              "Name": "prod-eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.prod_nic_1",
            "aws_security_group.prod_sg_1",
            "aws_subnet.prod_sub_1",
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_srv_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:575754814210:instance/i-0ff4b20a46153c5e7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff4b20a46153c5e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Practice_Linux_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-02b5288dd688a5003"
              }
            ],
            "primary_network_interface_id": "eni-02b5288dd688a5003",
            "private_dns": "ip-10-81-3-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.81.3.33",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00628cb6597db6366",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad704d4933b52f49",
            "tags": {
              "Name": "prod-srv-1"
            },
            "tags_all": {
              "Name": "prod-srv-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063255674c459580d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575754814210",
            "id": "i-0ff4b20a46153c5e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.prod_nic_1",
            "aws_security_group.prod_sg_1",
            "aws_subnet.prod_sub_1",
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:internet-gateway/igw-05dc716d4050e936e",
            "id": "igw-05dc716d4050e936e",
            "owner_id": "575754814210",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-igw-1"
            },
            "tags_all": {
              "Name": "prod-igw-1"
            },
            "vpc_id": "vpc-0db77411fb889ce39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod_nic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:network-interface/eni-02b5288dd688a5003",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a625e1a193a58cd8",
                "device_index": 0,
                "instance": "i-0ff4b20a46153c5e7",
                "network_card_index": 0
              }
            ],
            "id": "eni-02b5288dd688a5003",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:58:43:68:51:e7",
            "owner_id": "575754814210",
            "private_ip": "10.81.3.33",
            "private_ip_list": [
              "10.81.3.33"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.81.3.33"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-063255674c459580d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad704d4933b52f49",
            "tags": {
              "Name": "prod-nic-1"
            },
            "tags_all": {
              "Name": "prod-nic-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.prod_sg_1",
            "aws_subnet.prod_sub_1",
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:route-table/rtb-0e49845f4dddac1f6",
            "id": "rtb-0e49845f4dddac1f6",
            "owner_id": "575754814210",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dc716d4050e936e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt-1"
            },
            "tags_all": {
              "Name": "prod-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db77411fb889ce39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575754814210",
            "id": "rtb-0e49845f4dddac1f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw_1",
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041cf22155bc1d5a8",
            "region": "us-east-1",
            "route_table_id": "rtb-0e49845f4dddac1f6",
            "subnet_id": "subnet-0ad704d4933b52f49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_igw_1",
            "aws_route_table.prod_rt_1",
            "aws_subnet.prod_sub_1",
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:security-group/sg-063255674c459580d",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063255674c459580d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-web-sg1",
            "name_prefix": "",
            "owner_id": "575754814210",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-1"
            },
            "tags_all": {
              "Name": "prod-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db77411fb889ce39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575754814210",
            "id": "sg-063255674c459580d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:subnet/subnet-0ad704d4933b52f49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.81.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad704d4933b52f49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575754814210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-sub-1"
            },
            "tags_all": {
              "Name": "prod-sub-1"
            },
            "vpc_id": "vpc-0db77411fb889ce39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575754814210",
            "id": "subnet-0ad704d4933b52f49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575754814210:vpc/vpc-0db77411fb889ce39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-01eeff040772a29aa",
            "default_route_table_id": "rtb-062c0490b08c0e4f8",
            "default_security_group_id": "sg-0af1b89ca6c487005",
            "dhcp_options_id": "dopt-0524b7aca4a9f11dc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db77411fb889ce39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062c0490b08c0e4f8",
            "owner_id": "575754814210",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-1"
            },
            "tags_all": {
              "Name": "prod-vpc-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575754814210",
            "id": "vpc-0db77411fb889ce39",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}